oc/03-with-buildconfig/050-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: html-docker-app
  labels:
    app: html-docker-app
    app.kubernetes.io/part-of: html-docker-app
spec:
  to:
    kind: Service
    name: html-docker-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
